fix styling issue on mobile

--- a/source/themes/geografia_theme/static/css/style.css
+++ b/source/themes/geografia_theme/static/css/style.css
@@ -1,3 +1,11 @@
+/*
+ * Fix the wonky mobild problem
+ */
+
+body, html {
+    overflow-x: hidden;
+}
+
 @charset "UTF-8";@font-face {
   font-family: "Steelfish";
   src: url('../fonts/steelfish/steelfish_eb-webfont.eot');
